syntax = "proto3";

package driver_web_grpc.proto.services;

import "google/protobuf/empty.proto";

service Stats {
  rpc GetStats(google.protobuf.Empty) returns (GetStatsResponse);
}

message StatsPair {
  uint64 total = 1;
  uint64 active = 2;
}

message GetStatsResponse {
  StatsPair accounts = 1;
  StatsPair sessions = 2;
  StatsPair channels = 3;
  StatsPair chats = 4;
  StatsPair bots = 5;
}
